# tpe_cloud_2025

./: .gitignore  Dockerfile  docker-compose.yml  nginx.conf  requirements.txt
backend/: .env.development  manage.py  pyproject.toml
backend/config/: settings.py  settings_base.py  settings_local.py  settings_production.py  urls.py
backend/pools/: models.py  serializers.py  urls.py  views.py
backend/pools/migrations/: 0001_initial.py
backend/products/: models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py
docker/: entrypoint.sh
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  typed-router.d.ts
frontend/src/pages/: index.vue  products.vue
frontend/src/pages/pools/: index.vue
frontend/src/pages/pools/[poolId]/: requests.vue
frontend/src/services/: api.ts
